tests/Rules/Forms/Fixtures/valid/select_with_label.html.twig
<label for="s">Choice</label>
<select id="s"><option>1</option></select>
