tests/Rules/Forms/Fixtures/invalid/select_no_label.html.twig
<select><option>1</option></select>
